--- a/src/app/main/tricks/components/coin-rotate/coin-rotate.component.html
+++ b/src/app/main/tricks/components/coin-rotate/coin-rotate.component.html
@@ -1,1 +1,9 @@
-<p>coin-rotate works!</p>
+<div class="main-block">
+  <div class="coin-block">
+    <img alt="" src="assets/images/coin.png">
+  </div>
+  <div class="shadow-block">
+    <div class="coin-shadow"></div>
+  </div>
+</div>
+
