--- a/src/app/main/about/about.component.scss
+++ b/src/app/main/about/about.component.scss
@@ -31,7 +31,7 @@
   top: 0;
   bottom: 0;
   text-align: center;
-  background-image: url("/assets/images/vlad-about.jpg");
+  background-image: url("/assets/images/vlad-about2.PNG");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -59,16 +59,15 @@
     a {
       height: 40px;
       padding: 6px;
-      color: #6c6c6c;
+      color: white;
       width: 40px;
       border-radius: 50%;
       transition: all 0.5s;
-      box-shadow: inset 0 0 5px 0 #6c6c6c;
+      box-shadow: inset 0 0 5px 0 white;
 
       &:hover {
-        color: white;
-        background: blue;
-        box-shadow: 0 0 10px blue;
+        background: black;
+        box-shadow: 0 0 10px gray;
       }
     }
   }
