feat: in develop mode

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -34,3 +34,5 @@
 </div>
 
 <app-about *ngIf="isAboutShowed" @fadeIn (close)="isAboutShowed = false"></app-about>
+
+<p class="in-progress">The library in develop mode</p>
